--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,5 +32,8 @@ jobs:
       uses: docker/build-push-action@v3
       with:
           context: .
+          file: nginx/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64,x86_64
+          tags: |
+            duzexu/app-space:latest
