--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,6 +34,6 @@ jobs:
           context: .
           file: nginx/Dockerfile
           push: true
-          platforms: linux/amd64,linux/arm64,x86_64
+          platforms: linux/amd64,linux/arm64
           tags: |
-            duzexu/app-space:latest
+            ghcr.io/duzexu/app-space:latest
